# metrix

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: gunicorn_web_server.py  logging.py  settings.py
app/presentation/: application.py  dependecies.py  lifespan.py  limiter.py  middlewares.py  utils.py
app/presentation/apis/: router.py
app/presentation/apis/health_check/: __init__.py  schema.py  views.py
app/presentation/apis/v1/: __init__.py  router.py
app/presentation/apis/v1/docs/: views.py
app/presentation/apis/v1/dummy/: __init__.py  schema.py  views.py
app/repository/db/: base.py  dummy_db_repo.py  utils.py
app/repository/db/models/: dummy.py
app/service/: __init__.py
app/service/dummy/: __init__.py  dummy_service.py
app/tests/: conftest.py
app/tests/api/: test_dummy.py  test_health_check.py
app/tests/factories/: dummy.py  session.py
